# fresh_weave

./: .gitignore  LONG_PRESS_DEBUG.md  README.md  app.py  db_inspection_20250713_124342.txt  db_inspection_20250713_124818.txt  db_operations.py  diff.txt  filelist.txt  force_push.bat  gsheet_operations.py  initial_sujets.csv  jest.config.js  netlify.toml  package.json  pyproject.toml  requirements.txt  restart_weave_dev.bat  rollback_to_dev_snapshot.bat  rollback_to_prod.bat  run_weave_dev.bat  stop_weave.bat  sync_db.py  test_adjacent.py  test_flask_route.py  test_query_build.py  toggle-test.html  weave_batch.py  weave_limited.py
.git_old/: .COMMIT_EDITMSG.swp  COMMIT_EDITMSG  FETCH_HEAD  config  index
.git_old/logs/: HEAD
.git_old/logs/refs/: stash
.git_old/logs/refs/heads/: main  master
.git_old/logs/refs/heads/refactor/: app-module-organization
.git_old/logs/refs/remotes/origin/: main
.git_old/refs/: stash
.git_old/refs/heads/: main  master
.git_old/refs/heads/refactor/: app-module-organization
.git_old/refs/remotes/origin/: main
static/: manifest.json  script.js  script.js.bak  style.css  sw.js  ui_test.html
static/__tests__/: utils.test.js
static/js/: utils.js
templates/: index.html
tests/: test_app.py
weave alt/: app_preskip.py  app_previbe.py
