[tool.poetry]
name = "weave-app"
version = "0.1.0"
description = "Personal enrichment and conversation-sparking tool."
authors = ["Daniel Weyandt <danielweylandt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "*"
gunicorn = "*"
pandas = ">=1.3"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = ">=0.4"
openai = "*"
python-dotenv = ">=0.19"
gspread = ">=5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-flask = ">=1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
